Fix horizontal overflow bug

--- a/_themes/classic/css/_sass/partials/_web-footer.scss
+++ b/_themes/classic/css/_sass/partials/_web-footer.scss
@@ -5,7 +5,7 @@
 #footer {
 	border-top: 1px solid #f2f2f2;
 	margin: 2em 0 0 0;
-	padding: 1em 0.3em 2em 0.3em;
+	padding: 1em 0;
 	width: 100%; // Prevents floating when preceding elemtns float or flex
 }
 .footer-content {
